added recyclerview, adapter, networking, and dialog

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,16 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     compileSdkVersion 29
     buildToolsVersion "30.0.1"
 
